salesforce_sfdx/main/default/objects/Lead/fields/CE_Building_Type__c.field-meta.xml
<CustomField>
    <fullName>CE_Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>College-Cafeteria</fullName>
            </value>
            <value>
                <fullName>College-Dormitory</fullName>
            </value>
            <value>
                <fullName>College-Classes/Administrative</fullName>
            </value>
            <value>
                <fullName>Commercial Condo</fullName>
            </value>
            <value>
                <fullName>Convenience Store</fullName>
            </value>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Court House</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Dining-Bar/Lounge/Leisure</fullName>
            </value>
            <value>
                <fullName>Dining-Family</fullName>
            </value>
            <value>
                <fullName>Dining-Cafeteria/Fast Food</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Exercise Center</fullName>
            </value>
            <value>
                <fullName>Fast Food Restaurants</fullName>
            </value>
            <value>
                <fullName>Fire Station (Unmanned)</fullName>
            </value>
            <value>
                <fullName>Food Stores</fullName>
            </value>
            <value>
                <fullName>Gymnasiums</fullName>
            </value>
            <value>
                <fullName>Hospital-Healthare</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Industrial-First Shift</fullName>
            </value>
            <value>
                <fullName>Industrial-Second Shift</fullName>
            </value>
            <value>
                <fullName>Industrial-Third Shift</fullName>
            </value>
            <value>
                <fullName>Laundromat</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Light Manufacturers</fullName>
            </value>
            <value>
                <fullName>Lodging-Hotels</fullName>
            </value>
            <value>
                <fullName>Lodging-Hotels/Motels-Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>