salesforce_sfdx/main/default/objects/Lead/fields/CE_Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Estimated_Completion_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>