salesforce_sfdx/main/default/objects/Lead/fields/CE_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>CE_Lead_Type__c</fullName>
    <description>Used to differentiate leads for portfolio customers, and will be used to segment email campaigns</description>
    <inlineHelpText>Primary or secondary, used to differentiate leads for portfolio customers, and will be used to segment email campaigns</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Utility Customer (Direct)</fullName>
            </value>
            <value>
                <fullName>Market Partner</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>SEP Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>