salesforce_sfdx/main/default/objects/Lead/fields/CE_Reason_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>CE_Reason_Unqualified__c</fullName>
    <label>Reason Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Pay MAC</fullName>
            </value>
            <value>
                <fullName>Not in Con Ed Territory</fullName>
            </value>
            <value>
                <fullName>Measure Does Not Qualify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>