salesforce_sfdx/main/default/objects/Lead/fields/CE_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>CE_Referred_By__c</fullName>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Cameron Engineering</fullName>
            </value>
            <value>
                <fullName>Con Edison</fullName>
            </value>
            <value>
                <fullName>Customer by Hotline</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Market Partner/Trade Ally</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>NYSERDA</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>SBDI</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Utility Representative</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Network Contact</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>