salesforce_sfdx/main/default/objects/Lead/fields/Conversion_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Timeline__c</fullName>
    <label>Conversion Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater than 60 days</fullName>
            </value>
            <value>
                <fullName>Less than 60 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>