salesforce_sfdx/main/default/objects/Lead/fields/Converted_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Completed by Flow when Lead is converted.</description>
    <inlineHelpText>Automatically completed when Lead is converted</inlineHelpText>
    <label>Converted to Project</label>
    <referenceTo>vlocity_cmt__Application__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>