salesforce_sfdx/main/default/objects/Lead/fields/EEDM_Code__c.field-meta.xml
<CustomField>
    <fullName>EEDM_Code__c</fullName>
    <formula>CE_Account__r.EEDM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EEDM Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>