salesforce_sfdx/main/default/objects/Lead/fields/I_would_like_to_learn_more_about__c.field-meta.xml
<CustomField>
    <fullName>I_would_like_to_learn_more_about__c</fullName>
    <label>I would like to learn more about</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Commercial efficiency</fullName>
            </value>
            <value>
                <fullName>Small Business efficiency</fullName>
            </value>
            <value>
                <fullName>Smart Usage Rewards (Demand Response)</fullName>
            </value>
            <value>
                <fullName>Multifamily efficiency (5+ units)</fullName>
            </value>
            <value>
                <fullName>Large Commercial Customers</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Renters and Homeowners</fullName>
            </value>
            <value>
                <fullName>Multi-Family Buildings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>