salesforce_sfdx/main/default/objects/Lead/fields/I_would_like_to_make_Upgrades_to_my__c.field-meta.xml
<CustomField>
    <fullName>I_would_like_to_make_Upgrades_to_my__c</fullName>
    <description>Lighting, Gas, HVAC, Other for Microsite portal</description>
    <inlineHelpText>Lighting, Gas, HVAC, Other</inlineHelpText>
    <label>I would like to make Upgrades to my</label>
    <length>100</length>
    <type>Text</type>
</CustomField>