salesforce_sfdx/main/default/objects/Lead/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <description>Populate Web to Lead with customer interest for the SBDI,C&amp;I and DR Programs.</description>
    <label>Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>