salesforce_sfdx/main/default/objects/Lead/fields/Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to any contact in the system - intended to be the "primary" contact for this lead.</description>
    <inlineHelpText>Identify the primary Contact for this Lead - Actual Person</inlineHelpText>
    <label>Lead Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>