salesforce_sfdx/main/default/objects/Lead/fields/Lead_Last_Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Claimed_Date__c</fullName>
    <description>To capture Lead's last claimed date</description>
    <label>Lead Last Claimed Date</label>
    <type>Date</type>
</CustomField>