salesforce_sfdx/main/default/objects/Lead/fields/Lead_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Reason__c</fullName>
    <label>Lead Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Ineligible</fullName>
            </value>
            <value>
                <fullName>Customer not interested</fullName>
            </value>
            <value>
                <fullName>Portal project created</fullName>
            </value>
            <value>
                <fullName>Duplicate/Created in error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>