salesforce_sfdx/main/default/objects/Lead/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter Program</description>
    <label>Program</label>
    <referenceTo>Energy_Efficiency_Program__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>