salesforce_sfdx/main/default/objects/Lead/fields/Ready_To_Convert_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Convert_Date__c</fullName>
    <label>Ready To Convert Date</label>
    <type>Date</type>
</CustomField>