salesforce_sfdx/main/default/objects/Lead/fields/Strategic_Energy_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Energy_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Strategic Energy Partnership related to this Lead.</description>
    <inlineHelpText>This field contains the Strategic Energy Partnership related to this Lead.</inlineHelpText>
    <label>Strategic Energy Partnership</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>